src/test/deca/context/valid/our_tests/thomas-classMethods5.deca
class A {

    int x = 0;

    void add() {
        this.x = this.x + 1;
    }

}


{

    A a = new A();

    println(a.x);
    a.add();
    println(a.x);

}
